--- a/FrisbyBall/Views/OpponentListViewPage.xaml
+++ b/FrisbyBall/Views/OpponentListViewPage.xaml
@@ -52,13 +52,13 @@
                     HorizontalOptions="FillAndExpand"
                     VerticalOptions="FillAndExpand"
                     Grid.Row="1"
-                    Grid.Column=""/>
-            <Button Text="Top Players"
+                    Grid.Column="0"/>
+            <!--<Button Text="Top Players"
                     Clicked="TopPlayersEvent"
                     HorizontalOptions="FillAndExpand"
                     VerticalOptions="FillAndExpand"
                     Grid.Row="1"
-                    Grid.Column="1"/>
+                    Grid.Column="1"/>-->
         </Grid>
     </Grid>
 </ContentPage>
